# OSLab-2022-23

./: README.md
ex2/: CMakeLists.txt  Makefile  ask2-fork  ask2-fork.c  ask2-signals  ask2-signals.c  fork-example  pipe-example  pipe-example.c  tree-example  tree-example.c
ex2/forktree/: Makefile  ask2-fork  ask2-fork.c  ask2-signals  ask2-signals.c  pipe-example  pipe-example.c  tree-example  tree-example.c
ex3/: Makefile  kgarten  mandel  mandel-sem  mandel-sem.c  mandel-var  mandel-var.c  mandel.c  pthread-test  simplesync-atomic  simplesync-atomic.s  simplesync-mutex  simplesync-mutex.s  simplesync.c
ex4/: mandel-sem.c  mmap  mmap.c
ex4/mandel/: Makefile  mandel-fork  mandel-fork.c  mandel-lib.c  mandel-sem-fork  mandel-sem-fork.c
forktree/: ask2-fork  ask2-fork.c  ask2-signals.c  tree-example  tree-example.c
